--- a/templates/test.html
+++ b/templates/test.html
@@ -1,44 +1,73 @@
 <html>
 <head>
+  <script type="text/javascript">
+  var disqus_shortname = 'yoursiteshortnameindisqus';
+  var disqus_identifier; //made of post id and guid
+  var disqus_url; //post permalink
 
+  function loadDisqus(source, identifier, url) {
+
+  if (window.DISQUS) {
+
+     jQuery('#disqus_thread').insertAfter(source); //append the HTML after the link
+
+     //if Disqus exists, call it's reset method with new parameters
+     DISQUS.reset({
+        reload: true,
+        config: function () {
+        this.page.identifier = identifier;
+        this.page.url = url;
+        }
+     });
+
+  } else {
+
+     //insert a wrapper in HTML after the relevant "show comments" link
+     jQuery('<div id="disqus_thread"></div>').insertAfter(source);
+     disqus_identifier = identifier; //set the identifier argument
+     disqus_url = url; //set the permalink argument
+
+     //append the Disqus embed script to HTML
+     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+     dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+     jQuery('head').append(dsq);
+
+  }
+  };
+  </script>
 
 </head>
 <body>
  <p> this is a paragraph </p>
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
-      var disqus_identifier = '/testingidentifier/';
-      var disqus_title = 'le test';
-
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
   <p> more paragraph stuff ... </p>
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
-      var disqus_identifier = '/moretesting/';
-      var disqus_title = 'le test';
+  <div class="this-is-single-post-wrapper">
+    <h1> header for the post content!!</h1>
+    <p> now for the comments </p>
+   <a onclick="loadDisqus(jQuery(this), '<?= $id ?> <?= $post->guid ?>', '<? the_permalink() ?>');">
+      Show comments
+   </a>
+</div>
 
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+  <script src="/static/js/jquery.js"></script>
 </body>
 
 
 </html>
+
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
+    var disqus_identifier = '/second disqus/';
+    var disqus_title = 'second title';
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
