--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -423,29 +423,33 @@
   <div class="col-md-12">
     <div class="drop-downs">
         <div class="comments-button">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo"> Join the Discussion</button>
-          <div id="demo" class="collapse">
-            <div id="disqus_thread"></div>
-            <script type="text/javascript">
-              /* * * CONFIGURATION VARIABLES * * */
-              var disqus_shortname = 'knowitwall';
-              var disqus_identifier = 'its_at_tate';
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment1" onclick="loadDisqus(jQuery(this), 'test_disqus', 'http://localhost:5000/test');"> Join the Discussion</button>
+          <div id="test_disqus" class="collapse">
 
-              /* * * DON'T EDIT BELOW THIS LINE * * */
-              (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-              })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
              <div class="disqus-collapse" style="display:none;">Collapse Text</div>
           </div>
         </div>
         <div class="transcript-button">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Read the Transcript</button>
-          <div id="transcript" class="collapse">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#bige">Read the Transcript</button>
+          <div id="bige" class="collapse transcript"> <!-- transcript class gives the padding -->
             {{ audiodocs[0].transcript | safe }}
+          </div>
+         </div>
+    </div>
+
+<!-- TESTING SEVERAL COMMENT SECTIONS!!-->
+    <div class="drop-downs">
+        <div class="comments-button">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment2" onclick="loadDisqus(jQuery(this), 'second_test', 'http://localhost:5000/test2');"> Join the Discussion 2</button>
+          <div id="second_test" class="collapse">
+
+             <div class="disqus-collapse" style="display:none;">Collapse Text</div>
+          </div>
+        </div>
+        <div class="transcript-button">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#tate">Read the Transcript</button>
+          <div id="tate" class="collapse transcript">
+            lala
           </div>
          </div>
 
@@ -795,23 +799,42 @@ new SineWaveGenerator({
     gradient = void 0;
   }
 });
-          </script>
-
-  <!-- Disqus script -->
-<!--
-  <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES * * */
-      var disqus_shortname = 'knowitwall';
-
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function () {
-          var s = document.createElement('script'); s.async = true;
-          s.type = 'text/javascript';
-          s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-          (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-      }());
   </script>
--->
+  <script type="text/javascript">
+  var disqus_shortname = 'knowitwall';
+  var disqus_identifier; //made of post id and guid
+  var disqus_url; //post permalink
+
+  function loadDisqus(source, identifier, url) {
+
+  if (window.DISQUS) {
+
+     jQuery('#disqus_thread').insertAfter(source); //append the HTML after the link
+
+     //if Disqus exists, call it's reset method with new parameters
+     DISQUS.reset({
+        reload: true,
+        config: function () {
+        this.page.identifier = identifier;
+        this.page.url = url;
+        }
+     });
+
+  } else {
+
+     //insert a wrapper in HTML after the relevant "show comments" link
+     jQuery('<div id="disqus_thread"></div>').insertAfter(source);
+     disqus_identifier = identifier; //set the identifier argument
+     disqus_url = url; //set the permalink argument
+
+     //append the Disqus embed script to HTML
+     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+     dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+     jQuery('head').append(dsq);
+
+  }
+  };
+  </script>
 </div> <!-- overflow fix -->
 </body>
 </html>
