--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,47 @@
 <html>
 <head>
+
+  <script src="/static/js/jquery.js"></script>
+  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+</head>
+<body>
+  <p> this is a paragraph </p>
+  <div class="this-is-single-post-wrapper">
+    <h1> header for the post content!!</h1>
+    <p> Some content about a post </p>
+    <div class="transcript-button">
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Read the Transcript</button>
+      <div id="transcript" class="collapse">
+        <h1> stuff!! </h1>
+      </div>
+     </div>
+    <button onclick="loadDisqus(jQuery(this), 'test_disqus', 'http://localhost:5000/test');">
+      Show comments
+    </button>
+  </div>
+  <p>BREAK BETWEEN TOGGLE DISQUS COMMETNS</p>
+
+  <div class="this-is-single-post-wrapper">
+    <h1> header for the second post content!!</h1>
+    <p> post number 2 </p>
+    <button onclick="loadDisqus(jQuery(this), 'second_test', 'http://localhost:5000/test2');">
+      Show comments
+    </button>
+  </div>
+  <div class="this-is-single-post-wrapper">
+    <h1> 3rd post header!</h1>
+    <p> post number 3zzzz </p>
+    <button onclick="loadDisqus(jQuery(this), 'third_test', 'http://localhost:5000/test3');">
+      Show comments
+    </button>
+  </div>
+
+
+
+
   <script type="text/javascript">
-  var disqus_shortname = 'yoursiteshortnameindisqus';
+  var disqus_shortname = 'knowitwall';
   var disqus_identifier; //made of post id and guid
   var disqus_url; //post permalink
 
@@ -36,38 +76,7 @@
   };
   </script>
 
-</head>
-<body>
- <p> this is a paragraph </p>
-
-  <p> more paragraph stuff ... </p>
-  <div class="this-is-single-post-wrapper">
-    <h1> header for the post content!!</h1>
-    <p> now for the comments </p>
-   <a onclick="loadDisqus(jQuery(this), '<?= $id ?> <?= $post->guid ?>', '<? the_permalink() ?>');">
-      Show comments
-   </a>
-</div>
-
-  <script src="/static/js/jquery.js"></script>
 </body>
 
 
 </html>
-
-
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
-    var disqus_identifier = '/second disqus/';
-    var disqus_title = 'second title';
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
