added a comment to knowitwall.html showing where Disqus should be placed

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -425,7 +425,7 @@
         <div class="comments-button">
           <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment1" onclick="loadDisqus(jQuery(this), 'test_disqus', 'http://localhost:5000/test');"> Join the Discussion</button>
           <div id="test_disqus" class="collapse">
-
+            <!-- jquery should place Disqus here -->
              <div class="disqus-collapse" style="display:none;">Collapse Text</div>
           </div>
         </div>
@@ -442,7 +442,7 @@
         <div class="comments-button">
           <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment2" onclick="loadDisqus(jQuery(this), 'second_test', 'http://localhost:5000/test2');"> Join the Discussion 2</button>
           <div id="second_test" class="collapse">
-
+            <!-- jquery should place Disqus here -->
              <div class="disqus-collapse" style="display:none;">Collapse Text</div>
           </div>
         </div>
