--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -53,16 +53,7 @@
   ga('send', 'pageview');
   </script>
 
-  <!-- google analytics for theknowitwall@gmail.com -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-62617437-1', 'auto');
-  ga('send', 'pageview');
-  </script>
 </head>
 
 <body id="page-top" class="index">
@@ -84,6 +75,8 @@
         <a class="navbar-brand" href="#page-top">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    width="100%" height="52.5px" viewBox="0 0 302.5 52.5" enable-background="new 0 0 302.5 52.5" xml:space="preserve">
+
+<!-- svg shizzle -->
 <g>
   <g id="layer1_1_" transform="translate(-241.83035,-280.77737)">
     <path id="text2413_1_" fill="#FFFFFF" d="M277.766,299.816c-0.913,6.336-1.37,10.757-1.37,13.264c0,5.216,1.341,7.824,4.022,7.824
@@ -571,6 +564,7 @@
   </div>
 
 
+<!-- scripts! -->
 
   <!-- jQuery -->
   <script src="/static/js/jquery.js"></script>
@@ -602,6 +596,8 @@
     });
   </script>
 
+
+<!-- disqus reveal and collapse -->
 <script>
 $('.disqus-reveal').click(function() {
     $(this).slideUp(100);
@@ -616,202 +612,6 @@ $('.disqus-collapse').click(function() {
 
 </script>
 
-<script>
-function SineWaveGenerator(options) {
-  $.extend(this, options || {});
-
-  if(!this.el) { throw "No Canvas Selected"; }
-  this.ctx = this.el.getContext('2d');
-
-  if(!this.waves.length) { throw "No waves specified"; }
-
-  // Internal
-  this._resizeWidth();
-  window.addEventListener('resize', this._resizeWidth.bind(this));
-  // User
-  this.resizeEvent();
-  window.addEventListener('resize', this.resizeEvent.bind(this));
-
-  if(typeof this.initialize === 'function') {
-    this.initialize.call(this);
-  }
-  // Start the magic
-  this.loop();
-}
-
-// Defaults
-SineWaveGenerator.prototype.speed = 1;
-SineWaveGenerator.prototype.amplitude = 30;
-SineWaveGenerator.prototype.wavelength = 50;
-SineWaveGenerator.prototype.segmentLength = 10;
-
-SineWaveGenerator.prototype.lineWidth = 2;
-SineWaveGenerator.prototype.strokeStyle  = 'rgba(255, 255, 255, 0.2)';
-
-SineWaveGenerator.prototype.resizeEvent = function() {};
-
-// fill the screen
-SineWaveGenerator.prototype._resizeWidth = function() {
-  this.dpr = window.devicePixelRatio || 1;
-
-  this.width = this.el.width = window.innerWidth * this.dpr;
-  this.height = this.el.height = window.innerHeight * this.dpr;
-  this.el.style.width = window.innerWidth + 'px';
-  this.el.style.height = window.innerHeight + 'px';
-
-  this.waveWidth = this.width * 0.95;
-  this.waveLeft = this.width * 0.025;
-}
-
-SineWaveGenerator.prototype.clear = function () {
-  this.ctx.clearRect(0, 0, this.width, this.height);
-}
-
-SineWaveGenerator.prototype.time = 0;
-
-SineWaveGenerator.prototype.update = function(time) {
-  this.time = this.time - 0.007;
-  if(typeof time === 'undefined') {
-    time = this.time;
-  }
-
-  var index = -1;
-  var length = this.waves.length;
-
-  while(++index < length) {
-    var timeModifier = this.waves[index].timeModifier || 1;
-    this.drawSine(time * timeModifier, this.waves[index]);
-  }
-  index = void 0;
-  length = void 0;
-}
-
-// Constants
-var PI2 = Math.PI * 2;
-var HALFPI = Math.PI / 2;
-
-SineWaveGenerator.prototype.ease = function(percent, amplitude) {
-  return amplitude * (Math.sin(percent * PI2 - HALFPI) + 1) * 0.5;
-}
-
-SineWaveGenerator.prototype.drawSine = function(time, options) {
-  options = options || {};
-  amplitude = options.amplitude || this.amplitude;
-  wavelength = options.wavelength || this.wavelength;
-  lineWidth = options.lineWidth || this.lineWidth;
-  strokeStyle = options.strokeStyle || this.strokeStyle;
-  segmentLength = options.segmentLength || this.segmentLength;
-
-  var x = time;
-  var y = 0;
-  var amp = this.amplitude;
-
-  // Center the waves
-  var yAxis = this.height / 2;
-
-  // Styles
-  this.ctx.lineWidth = lineWidth * this.dpr;
-  this.ctx.strokeStyle = strokeStyle;
-  this.ctx.lineCap = 'round';
-  this.ctx.lineJoin = 'round';
-  this.ctx.beginPath();
-
-  // Starting Line
-  this.ctx.moveTo(0, yAxis);
-  this.ctx.lineTo(this.waveLeft, yAxis);
-
-  for(var i = 0; i < this.waveWidth; i += segmentLength) {
-    x = (time * this.speed) + (-yAxis + i) / wavelength;
-    y = Math.sin(x);
-
-    // Easing
-    amp = this.ease(i / this.waveWidth, amplitude);
-
-    this.ctx.lineTo(i + this.waveLeft, amp * y + yAxis);
-
-    amp = void 0;
-  }
-
-  // Ending Line
-  this.ctx.lineTo(this.width, yAxis);
-
-  // Stroke it
-  this.ctx.stroke();
-
-  // Clean up
-  options = void 0;
-  amplitude = void 0;
-  wavelength = void 0;
-  lineWidth = void 0;
-  strokeStyle = void 0;
-  segmentLength = void 0;
-  x = void 0;
-  y = void 0;
-}
-
-SineWaveGenerator.prototype.loop = function() {
-  this.clear();
-  this.update();
-
-  window.requestAnimationFrame(this.loop.bind(this));
-}
-
-new SineWaveGenerator({
-  el: document.getElementById('waves'),
-
-  speed: 8,
-
-  waves: [
-    {
-      timeModifier: 1,
-      lineWidth: 20,
-      amplitude: 150,
-      wavelength: 200,
-      segmentLength: 20,
-//       strokeStyle: 'rgba(255, 255, 255, 0.5)'
-    }
-
-  ],
-
-  initialize: function (){
-
-  },
-
-  resizeEvent: function() {
-    var gradient = this.ctx.createLinearGradient(0, 0, this.width, 0);
-    gradient.addColorStop(0,"rgba(0, 0, 0, 0)");
-    gradient.addColorStop(0.5,"rgba(255, 255, 255, 0.5)");
-    gradient.addColorStop(1,"rgba(0, 0, 0, 0)");
-
-    var index = -1;
-    var length = this.waves.length;
-    while(++index < length){
-      this.waves[index].strokeStyle = gradient;
-    }
-
-    // Clean Up
-    index = void 0;
-    length = void 0;
-    gradient = void 0;
-  }
-});
-          </script>
-
-  <!-- Disqus script -->
-<!--
-  <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES * * */
-      var disqus_shortname = 'knowitwall';
-
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function () {
-          var s = document.createElement('script'); s.async = true;
-          s.type = 'text/javascript';
-          s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-          (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-      }());
-  </script>
--->
 </div> <!-- overflow fix -->
 </body>
 </html>
