--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -366,7 +366,7 @@
 
 
 
-  <!-- Previous episodes Section; I put loads of comments on the left to comment out the previous episodes -->
+  <!-- Previous episodes Section -->
 
   <section id="episodes">
     <div class="container">
@@ -398,63 +398,40 @@
 
         <!-- Author -->
 
-        <div class="author-bio">
-
+          <div class="author-bio">
             <div class="col-md-3">
-
               <img class="clip-circle"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
-
-          </div>
+            </div>
             <div class="col-md-3">
               <div class="author-name">
               <h2 style="text-align:right;"> {{ audiodocs[0].author_name }} </h2>
+              </div>
             </div>
-          </div>
-
-
             <div class="col-md-6">
               <div class="vertical-line">
               <p> {{ audiodocs[0].author_bio }} </p>
               </div>
             </div>
           </div>
-      </div>
+        </div>
 
-  <div class="col-md-12">
-    <div class="drop-downs">
-        <div class="comments-button">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment1" onclick="loadDisqus(jQuery(this), 'test_disqus', 'http://localhost:5000/test');"> Join the Discussion</button>
-          <div id="test_disqus" class="collapse">
-            <!-- jquery should place Disqus here, but it actually places it above <div id=test_disqus> -->
-             <div class="disqus-collapse" style="display:none;">Collapse Text</div>
+        <div class="col-md-12">
+          <div class="drop-downs">
+              <div class="comments-button">
+                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[0].disqus_collapse}}" onclick="loadDisqus('{{audiodocs[0].disqus_collapse}}', '{{audiodocs[0].unique_id}}', 'http://localhost:5000/test');"> Join the Discussion</button>
+                <div id="{{audiodocs[0].disqus_collapse}}" class="collapse">
+                  <!-- jquery should place Disqus here, but it actually places it above <div id=test_disqus> -->
+                   <div class="disqus-collapse" style="display:none;">Collapse Text</div>
+                </div>
+              </div>
+              <div class="transcript-button">
+                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[0].transcript_collapse}}">Read the Transcript</button>
+                <div id="{{audiodocs[0].transcript_collapse}}" class="collapse transcript"> <!-- transcript class gives the padding -->
+                  {{ audiodocs[0].transcript | safe }}
+                </div>
+               </div>
           </div>
         </div>
-        <div class="transcript-button">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[0].unique_id}}">Read the Transcript</button>
-          <div id="{{audiodocs[0].unique_id}}" class="collapse transcript"> <!-- transcript class gives the padding -->
-            {{ audiodocs[0].transcript | safe }}
-          </div>
-         </div>
-    </div>
-
-<!-- TESTING SEVERAL COMMENT SECTIONS!!-->
-    <div class="drop-downs">
-        <div class="comments-button">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment2" onclick="loadDisqus(jQuery(this), 'second_test', 'http://localhost:5000/test2');"> Join the Discussion 2</button>
-          <div id="second_test" class="collapse">
-            <!-- jquery should place Disqus here -->
-             <div class="disqus-collapse" style="display:none;">Collapse Text</div>
-          </div>
-        </div>
-        <div class="transcript-button">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#extraaudiodoc">Read the Transcript</button>
-          <div id="extraaudiodoc" class="collapse transcript">
-            lala
-          </div>
-         </div>
-
-    </div>
-  </div>
   </section>
 
 
@@ -809,7 +786,7 @@ new SineWaveGenerator({
 
   if (window.DISQUS) {
 
-     jQuery('#disqus_thread').insertAfter(source); //append the HTML after the link
+     jQuery('#disqus_thread').prependTo('#' + source); //append the HTML after the link
 
      //if Disqus exists, call it's reset method with new parameters
      DISQUS.reset({
@@ -823,7 +800,7 @@ new SineWaveGenerator({
   } else {
 
      //insert a wrapper in HTML after the relevant "show comments" link
-     jQuery('<div id="disqus_thread"></div>').insertAfter(source);
+     jQuery('<div id="disqus_thread"></div>').prependTo('#' + source);
      disqus_identifier = identifier; //set the identifier argument
      disqus_url = url; //set the permalink argument
 
