--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -164,6 +164,10 @@ header .container {
     padding-bottom: 300px;
 }
 
+.previous-audiodoc{
+  background-color: #F8F8F8;
+  padding-top: 30px;
+}
 
 
 header img {
