--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -334,6 +334,8 @@ text-align: left;
  color:#33353d;
  background-color: rgba(255, 194, 28, 1);
  margin-bottom: 20px;
+ display: inline-block;
+ white-space: nowrap;
 }
 
 @media(max-width:561px) {
