mehdis picture is now  the same size as miguels. audiodoc titles are now responsive

--- a/templates/test_2audiodocs.html
+++ b/templates/test_2audiodocs.html
@@ -359,7 +359,7 @@
 
 
 
-  <!-- Previous episodes Section -->
+  <!-- Audiodocs. The first is the most recent one -->
 
   <section id="episodes">
     <div class="container previous-audiodoc">
@@ -367,7 +367,7 @@
 
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <div class="episode-title">
-            {{audiodocs[0].topic_name}} 
+            {{audiodocs[0].topic_name}}
           </div>
 
           <p style="font-size:1.6em;">{{audiodocs[0].topic_description}}</p>
