--- a/templates/test_2audiodocs.html
+++ b/templates/test_2audiodocs.html
@@ -344,9 +344,9 @@
 
             <div class="col-md-6">
               <div class="vertical-line">
-              <p>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place.</p>
+              <p class = 'justify'>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place.</p>
               <br>
-              <p>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
+              <p class = 'justify'>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
 
             </div>
       </div>
@@ -397,7 +397,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p> {{ audiodocs[0].author_bio }} </p>
+              <p> {{ audiodocs[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
@@ -460,7 +460,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p> {{ audiodocs[1].author_bio }} </p>
+              <p> {{ audiodocs[1].author_bio | safe}} </p>
               </div>
             </div>
           </div>
@@ -499,8 +499,12 @@
           <h2> Contribute </h2>
           </div>
               <div class="vertical-line">
-              <p>
-                If you think your research is too interesting to be confined to academic circles, then just get in touch. Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line below with your details, institution and area of research.</p>
+              <p class = 'justify'>
+                If you think your research is too interesting to be confined to academic circles, then just get in touch.
+                Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject
+                we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line below
+                with your details, institution and area of research.
+              </p>
             </div>
       </div>
     </div>
