--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -9,7 +9,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Know It Wall">
+  <meta name="description" content="We make short audio documentaries, written by academics, for the enjoyment of everyone else.">
+  <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
   <meta property="og:title" content="Know It Wall" />
