feedback form working !

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -280,7 +280,7 @@
             <a href="#contribute">Contribute</a>
           </li>
           <li class="page-scroll">
-            <a href="#contact">Contact</a>
+            <a href="#contact">Feedback</a>
           </li>
         </ul>
       <!-- /.navbar-collapse -->
@@ -520,8 +520,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="contact-title">
-          <h2>Contact</h2>
-
+          <h2>Feedback</h2>
+          <p> We need your feedback to grow! Please leave some criticism, praise or advice below</p>
           </div>
 
         </div>
@@ -549,8 +549,16 @@
 
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Message</label>
-                <textarea rows="5" class="form-control" name="message" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                <label>Feedback on the text and performance</label>
+                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the text and performance" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+
+            <div class="row control-group">
+              <div class="form-group col-xs-12 floating-label-form-group controls">
+                <label>Overall Feedback</label>
+                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall Feedback" id="message" required data-validation-required-message="Please enter a message."></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
