feedback form completed

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -503,7 +503,7 @@
               <p class = 'justify'>
                 If you think your research is too interesting to be confined to academic circles, then just get in touch.
                 Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject
-                we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line below
+                we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line at theknowitwall@gmail.com
                 with your details, institution and area of research.
               </p>
             </div>
@@ -550,7 +550,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Feedback on the text and performance</label>
-                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the text and performance" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the text and performance" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -558,7 +558,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Overall Feedback</label>
-                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall Feedback" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall Feedback" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
