--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -309,9 +309,10 @@
 
         </div>
           <div class="col-md-8">
-
+          <!--  Let top researchers inspire you through short audio documentaries -->
           <div id="tagline-2">
-            Let top researchers inspire you through short audio documentaries
+          <br>
+          <br>
           </div>
 
         </div>
@@ -503,7 +504,7 @@
               <p class = 'justify'>
                 If you think your research is too interesting to be confined to academic circles, then just get in touch.
                 Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject
-                we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line at theknowitwall@gmail.com
+                we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line at team@knowitwall.com
                 with your details, institution and area of research.
               </p>
             </div>
@@ -521,7 +522,7 @@
         <div class="col-lg-12 text-center">
           <div class="contact-title">
           <h2>Feedback</h2>
-          <p> We need your feedback to grow! Please leave some criticism, praise or advice below</p>
+          <p> We need your feedback to grow! Please leave any criticism, praise or advice below</p>
           </div>
 
         </div>
@@ -549,8 +550,8 @@
 
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Feedback on the text and performance</label>
-                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the text and performance" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
+                <label>Feedback on the audio documentary</label>
+                <textarea rows="4" class="form-control" name="feedback_text" placeholder="Feedback on the audio documentary you've listened to (script, narration, music, sound effects, etc.) " id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -558,7 +559,7 @@
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Overall Feedback</label>
-                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall Feedback" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
+                <textarea rows="4" class="form-control" name="feedback_overall" placeholder="Overall feedback on the website and project" id="message" required data-validation-required-message="Please enter some feedback!"></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
