feedback form finished. sends email to team@knowitwall.com and our email addresses

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -603,10 +603,13 @@
     <div class="footer-below">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             Copyright &copy; Know it Wall 2015
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-4">
+            team@knowitwall.com
+          </div>
+          <div class="col-lg-4">
             Terms and Conditions
           </div>
         </div>
