made name and email optional in feedback form

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -534,16 +534,16 @@
           <form name="sentMessage" id="contactForm" novalidate>
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Name</label>
-                <input type="text" class="form-control" name="name" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                <label>Name (optional)</label>
+                <input type="text" class="form-control" name="name" placeholder="Name (optional)" id="name">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
 
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Email Address</label>
-                <input type="email" class="form-control" name="email" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                <label>Email address (optional)</label>
+                <input type="email" class="form-control" name="email" placeholder="Email address (optional)" id="email">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
