random spaces in html removed

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -295,9 +295,6 @@
   <!-- Most Recent Podcast Section -->
   <header>
 
-
-
-
     <div class="container">
       <div class="row">
         <div class="col-md-9">
@@ -314,18 +311,9 @@
           <br>
           <br>
           </div>
-
         </div>
-
-
-
-
-
-
       </div>
      </div>
-
-
   </header>
 
 
@@ -340,24 +328,17 @@
           <h2> What are we about? </h2>
           </div>
         </div>
+          <div class="col-md-6">
+            <div class="vertical-line">
+            <p class = 'justify'>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place.</p>
+            <br>
+            <p class = 'justify'>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
 
-
-
-
-            <div class="col-md-6">
-              <div class="vertical-line">
-              <p class = 'justify'>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place.</p>
-              <br>
-              <p class = 'justify'>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
-
-            </div>
+          </div>
       </div>
     </div>
     </div>
-  </section>
-
-
-
+  </section>g
 
 
 
